@@ -1,3 +1,14 @@
+2005-06-23  Ross Burton  <ross@burtonini.com>
+
+	* src/sound-juicer.h:
+	Add STATE column, and a state enum.
+
+	* src/sj-main.c:
+	Show the track state in the listview.
+
+	* src/sj-play.c:
+	Set the track state when starting/stopping a track.
+
 2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/sj-extracting.c: (on_extract_activate):
